still working on mobile width fix, reduced it considerably.

--- a/style.css
+++ b/style.css
@@ -45,7 +45,6 @@ body {
 table {
   width:100%;
   padding:1%;
-  display:inline-block;
 }
 
 td {
